--- a/prediction_gen.ipynb
+++ b/prediction_gen.ipynb
@@ -48,7 +48,7 @@
     "        preds_array[coords] = row['prediction']\n",
     "        coords_list.append(coords)\n",
     "    \n",
-    "    return preds_array, coords_list, dims\n",
+    "    return preds_array, coords_list, dims, df\n",
     "    "
    ]
   },
@@ -58,12 +58,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_confusion_matrix(slide, preds_df):\n",
+    "    confusion_mat = np.zeros((2, 2), dtype=np.int32)\n",
+    "\n",
+    "    for _,row in preds_df.iterrows():\n",
+    "        pred = int(round(row['prediction']))\n",
+    "        confusion_mat[row['labels'], pred] +=1\n",
+    "\n",
+    "    return confusion_mat\n",
+    "\n",
+    "#\n",
+    "\n",
+    "def print_cm(cm, labels, hide_zeroes=False, hide_diagonal=False, hide_threshold=None):\n",
+    "    \"\"\"\n",
+    "    Pretty print for confusion matrices\n",
+    "    from https://gist.github.com/zachguo/10296432\n",
+    "    \"\"\"\n",
+    "    columnwidth = max([len(x) for x in labels] + [5])  # 5 is value length\n",
+    "    empty_cell = \" \" * columnwidth\n",
+    "\n",
+    "    # Begin CHANGES\n",
+    "    fst_empty_cell = (columnwidth-3)//2 * \" \" + \"t/p\" + (columnwidth-3)//2 * \" \"\n",
+    "\n",
+    "    if len(fst_empty_cell) < len(empty_cell):\n",
+    "        fst_empty_cell = \" \" * (len(empty_cell) - len(fst_empty_cell)) + fst_empty_cell\n",
+    "    # Print header\n",
+    "    print(\"    \" + fst_empty_cell, end=\" \")\n",
+    "    # End CHANGES\n",
+    "\n",
+    "    for label in labels:\n",
+    "        print(\"%{0}s\".format(columnwidth) % label, end=\" \")\n",
+    "\n",
+    "    print()\n",
+    "    # Print rows\n",
+    "    for i, label1 in enumerate(labels):\n",
+    "        print(\"    %{0}s\".format(columnwidth) % label1, end=\" \")\n",
+    "        for j in range(len(labels)):\n",
+    "            cell = \"%{0}s\".format(columnwidth) % cm[i, j]\n",
+    "            if hide_zeroes:\n",
+    "                cell = cell if float(cm[i, j]) != 0 else empty_cell\n",
+    "            if hide_diagonal:\n",
+    "                cell = cell if i != j else empty_cell\n",
+    "            if hide_threshold:\n",
+    "                cell = cell if cm[i, j] > hide_threshold else empty_cell\n",
+    "            print(cell, end=\" \")\n",
+    "        print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def knn_smooth(preds_array, coords, knn_range=1, smooth_factor=0.7):\n",
     "    result_array = np.copy(preds_array)\n",
     "    \n",
     "    for c in coords:\n",
     "        x, y = c\n",
-    "        adj = preds_array[x-knn_range:x+knn_range+1, y-knn_range:y+knn_range+1]\n",
+    "        adj = preds_array[max(x-knn_range, 0):x+knn_range+1, max(y-knn_range,0):y+knn_range+1]\n",
     "        if smooth_factor != 1:\n",
     "            weights = np.invert(np.isnan(adj)) * smooth_factor\n",
     "            weights[knn_range, knn_range] = 1\n",
@@ -76,13 +129,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def estimate_surface_areas(preds_array, label_to_class):\n",
     "    class_preds = preds_array.round()\n",
-    "    n_classes = np.nanmax(class_preds) + 1\n",
+    "    n_classes = 2\n",
     "    num_per_class = defaultdict(int)\n",
     "    \n",
     "    \n",
@@ -98,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,56 +223,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_metrics(num_per_class, sa_dict, preds_array, class_to_label):\n",
     "    total_num = sum(list(num_per_class.values()))\n",
-    "    \n",
-    "    true_total_sa = sum([v for k,v in sa_dict.items() if k != \"normal_marrow\"])\n",
-    "    \n",
-    "    results_dict = defaultdict(lambda: {'true': None, 'pred': None})\n",
-    "    \n",
-    "    for class_name, val in num_per_class.items():\n",
-    "        true_ratio = sa_dict[class_name] / true_total_sa\n",
-    "        predicted_ratio = val / total_num\n",
-    "        \n",
-    "        results_dict[class_name]['true'] = true_ratio\n",
-    "        results_dict[class_name]['pred'] = predicted_ratio\n",
-    "        \n",
-    "        if class_to_label[class_name] == 1:\n",
-    "            mean_confidence = np.nanmean(preds_array)\n",
-    "            print(f\"Results for class {process_label(class_name)}:\")\n",
-    "            print(f\"Predicted ratio: {predicted_ratio:.2f}; True ratio: {true_ratio:.2f}; Mean Confidence: {mean_confidence:.2f}\")\n",
-    "        else:  \n",
-    "            print(f\"Results for class {process_label(class_name)}:\")\n",
-    "            print(f\"Predicted ratio: {predicted_ratio:.2f}; True ratio: {true_ratio:.2f}\")\n",
-    "        \n",
-    "    return results_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def process_predictions(slide):\n",
-    "    preds_array, coords, dims = create_preds_array(slide)\n",
-    "    if constants.KNN_SMOOTH:\n",
-    "        preds_array = knn_smooth(preds_array, coords)\n",
     "\n",
-    "    class_to_label = load_pickle_from_disk(f\"{constants.VISUALIZATION_HELPER_FILE_FOLDER}/class_to_label\")\n",
-    "    label_to_class = {v:k for k,v in class_to_label.items()}\n",
+    "    true_ls_ratio = sa_dict['large_tumor'] / (sa_dict['large_tumor'] + sa_dict['small_tumor'])\n",
+    "    pred_ls_ratio = num_per_class['large_tumor'] / (num_per_class['large_tumor'] + num_per_class['small_tumor'])\n",
     "\n",
-    "    num_per_class, sa_per_class = estimate_surface_areas(preds_array, label_to_class)\n",
+    "    print(f\"Predicted Large-Small Ratio: {pred_ls_ratio:.2f}; True ratio: {true_ls_ratio:.2f}\")\n",
     "\n",
-    "    visualize_predictions(preds_array, slide, label_to_class, dims)\n",
-    "\n",
-    "    sa_dict = get_sa_for_slide(slide)\n",
-    "    results_dict = get_metrics(num_per_class, sa_dict, preds_array, class_to_label)\n",
-    "    return results_dict"
+    "    return true_ls_ratio, pred_ls_ratio"
    ]
   },
   {
@@ -228,11 +244,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def process_predictions(slide):\n",
+    "    preds_array, coords, dims, df = create_preds_array(slide)\n",
+    "    if constants.KNN_SMOOTH:\n",
+    "        preds_array = knn_smooth(preds_array, coords)\n",
+    "\n",
+    "    class_to_label = load_pickle_from_disk(f\"{constants.VISUALIZATION_HELPER_FILE_FOLDER}/class_to_label\")\n",
+    "    label_to_class = {v:k for k,v in class_to_label.items()}\n",
+    "    \n",
+    "    confusion_matrix = get_confusion_matrix(slide, df)\n",
+    "    print_cm(confusion_matrix, labels = [label_to_class[i] for i in range(max(label_to_class.keys()) + 1)])\n",
+    "    print()\n",
+    "\n",
+    "    num_per_class, sa_per_class = estimate_surface_areas(preds_array, label_to_class)\n",
+    "\n",
+    "    visualize_predictions(preds_array, slide, label_to_class, dims)\n",
+    "\n",
+    "    sa_dict = get_sa_for_slide(slide)\n",
+    "    true, pred = get_metrics(num_per_class, sa_dict, preds_array, class_to_label)\n",
+    "    \n",
+    "    return true, pred, confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def process_all_predictions():\n",
+    "    confusion_mat = np.zeros((2, 2), dtype=np.int32)\n",
+    "    df = pd.DataFrame(columns=['slide', 'predicted_ratio', 'true_ratio'])\n",
+    "    \n",
     "    for slide_file in os.listdir(constants.PREDICTIONS_DIRECTORY):\n",
     "        slide = slide_file.replace(\".csv\", \"\")\n",
     "        print(f\"Results for Slide {slide}\")\n",
-    "        process_predictions(slide)"
+    "        true, pred, confuse = process_predictions(slide)\n",
+    "        \n",
+    "        confusion_mat += confuse\n",
+    "        df = df.append({'slide':slide, 'predicted_ratio':pred, 'true_ratio':true}, ignore_index=True)\n",
+    "        \n",
+    "    df.to_csv(os.path.join(constants.PREDICTIONS_DIRECTORY, \"predicted_ratios.csv\"))\n",
+    "    \n",
+    "    print(\"Final Confusion Matrix\")\n",
+    "    print()\n",
+    "    print_cm(confusion_mat, labels = [label_to_class[i] for i in range(max(label_to_class.keys()) + 1)])"
    ]
   },
   {
